[tool.poetry]
name = "uopt-rpgpd"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
jax = "0.4.8"
jaxlib = "0.4.7"
seaborn = "^0.12.2"
matplotlib = "^3.6.3"
notebook = "^6.5.2"
tqdm = "^4.64.1"
chex = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
